Retoques varios pre entrega (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -43,13 +43,13 @@
 \vspace*{\fill}
 
 
-%\chapter*{Autoría}
+\chapter*{Declaración de autoría}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % AUTORÍA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\import{tex/}{autoria.tex}
+\import{tex/}{autoria.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
