--- a/memoria/tex/abstract.tex
+++ b/memoria/tex/abstract.tex
@@ -3,7 +3,7 @@ Probably you had ever seen on the Internet, magazines or even journals any pictu
 
 There are lots of types of fractals and ways to generate them. However, many of them are based on the concept of `iteration'. In this document we explain carefully the theory while we show some \textit{Mathematica} codes we had used and the results we got. In case you did not know, \textit{Mathematica} is a widely used mathematical software all over the world. 
 
-We also created an interactive website where you can visualize 2D and 3D fractals. All the methods and tools we had used is explained and documented along this text.
+We also created an interactive website where you can visualize 2D and 3D fractals. Its URL is \url{https://jantoniovr.github.io/Geometria-Fractal/}. All the methods, codes and tools we had used is explained and documented along this text and you can find them in the GitHub repository, available in \url{https://github.com/JAntonioVR/Geometria-Fractal}.
 
 Now, we will explain in detail the chapters of this document and their contents.
 
