--- a/memoria/tex/apendices/instalacion.tex
+++ b/memoria/tex/apendices/instalacion.tex
@@ -32,9 +32,9 @@ python http.server 8000 # Si se dispone de Python3 (recomendado)
   
   Tras esto, abra su navegador en la URL \url{http://localhost:8000/} y encontrará la portada de la web.
 
-  Otra alternativa para los usuarios del editor \texttt{Visual\ Studio\ Code} (VSCode) es la extensión \href{https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer}{\textcolor{blue}{\texttt{Live\ Server}}}, la cual con tan solo instalarla y pulsar el botón `Go Live' que aparecerá en la esquina inferior derecha lanza un servidor web en el directorio que se tenga abierto en el momento y abre una ventana en el navegador.
+  Otra alternativa para los usuarios del editor \texttt{Visual\ Studio\ Code} (VSCode) es la extensión \href{https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer}{\textcolor{blue}{\texttt{Live\ Server}}}\footnote{Se puede acceder a dicha extensión mediante la url \url{https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer}}, la cual con tan solo instalarla y pulsar el botón `Go Live' que aparecerá en la esquina inferior derecha lanza un servidor web en el directorio que se tenga abierto en el momento y abre una ventana en el navegador.
 
-  Por último, en \href{https://nodejs.org/en/knowledge/HTTP/servers/how-to-create-a-HTTP-server/}{\textcolor{blue}{este enlace}} se explica la posibilidad de crear un servidor web utilizando \texttt{node.js}.
+  Por último, en \href{https://nodejs.org/en/knowledge/HTTP/servers/how-to-create-a-HTTP-server/}{\textcolor{blue}{este enlace}}\footnote{https://nodejs.org/en/knowledge/HTTP/servers/how-to-create-a-HTTP-server/} se explica la posibilidad de crear un servidor web utilizando \texttt{node.js}.
 
   \textbf{Nota:} Con Python se utiliza el puerto 8000, con `Live Server' el 5500 y con node.js el 8080. Sin embargo, es posible que por alguna razón esos puertos estén ocupados por otros procesos y aparezca algún error. Si esto ocurre simplemente utilice algún puerto distinto que esté disponible.
 
