--- a/memoria/tex/apendices/javascript-doc.tex
+++ b/memoria/tex/apendices/javascript-doc.tex
@@ -1,4 +1,4 @@
-En este apéndice documentaremos todas las clases, métodos y atributos que se han utilizado en el lenguaje JavaScript. Estas han sido utilizadas para gestionar desde un nivel más alto de abstracción los distintos componentes de WebGL explicados en la sección \ref{section:componentes-wgl}, modificar el DOM de los documentos HTML y darle valores a las variables \verb|attribute| y, de forma dinámica, también a las variables \verb|uniform| del fragment shader. Mencionar también el uso de la biblioteca \href{https://jquery.com/}{\textcolor{blue}{jQuery}}, la cual mediante una sintaxis simplificada de JavaScript nativo facilita en gran parte la programación en dicho lenguaje. Los ficheros que aquí documentamos pueden ser todos ellos encontrados en \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/static/js}, donde además de encontrar las funciones aquí descritas con su código fuente, también encontraremos la misma cabecera descriptiva que incluimos en este apéndice.
+En este apéndice documentaremos todas las clases, métodos y atributos que se han utilizado en el lenguaje JavaScript. Estas han sido utilizadas para gestionar desde un nivel más alto de abstracción los distintos componentes de WebGL explicados en la sección \ref{section:componentes-wgl}, modificar el DOM de los documentos HTML y darle valores a las variables \verb|attribute| y, de forma dinámica, también a las variables \verb|uniform| del fragment shader. Mencionar también el uso de la biblioteca \href{https://jquery.com/}{\textcolor{blue}{jQuery}}\footnote{Puede encontrarse documentación y distintas formas de descarga en la web oficial \url{https://jquery.com/}}, la cual mediante una sintaxis simplificada de JavaScript nativo facilita en gran parte la programación en dicho lenguaje. Los ficheros que aquí documentamos pueden ser todos ellos encontrados en el directorio \verb|static/js| o en el repositorio de GitHub, mediante la URL \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/static/js}. En estos ficheros además de encontrar las funciones aquí descritas con su código fuente, también encontraremos la misma cabecera descriptiva que incluimos en este apéndice.
 
 Presentamos también en la sección \ref{section:UML} un diagrama UML con las relaciones que tienen estas clases entre sí.
 
@@ -477,14 +477,14 @@ Fichero javascript que gestiona los eventos y los indicadores HTML del documento
 
 Tampoco existen clases, únicamente funciones manejadoras de eventos y la función \verb|main| que se ejecuta al cargar la página y contiene la inicialización de los elementos e indicadores HTML, la asignación de los manejadores de eventos y la primera visualización.
 
-Para no alargar innecesariamente este apéndice y para que el propio lector observe la metodología por sí mismo, lo invitamos a visitar el fichero completo en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/js/fractals-3D.js}.
+Para no alargar innecesariamente este apéndice y para que el propio lector observe la metodología por sí mismo, lo invitamos a visitar el fichero completo en \verb|static/js/fractals-3D.js| o en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/js/fractals-3D.js}.
 
 \newpage
 
 \section{Diagrama de clases UML}
 \label{section:UML}
 
-En la imagen \ref{fig:UML} podemos ver un diagrama de clases del código recién explicado. Si se desea ver en mayor detalle en \href{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}{\textcolor{blue}{este enlace}} puede encontrar el archivo en formato `png'.
+En la imagen \ref{fig:UML} podemos ver un diagrama de clases del código recién explicado. Si se desea ver en mayor detalle en \href{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}{\textcolor{blue}{este enlace}}\footnote{Disponible en la ruta \texttt{memoria/img/UML.png} del material entregado o en la URL \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}.} puede encontrar el archivo en formato `png'.
 
 \begin{figure} [ht]
 \centering
