--- a/memoria/tex/autoria.tex
+++ b/memoria/tex/autoria.tex
@@ -1,9 +1,11 @@
-I hereby affirm that this Master thesis was composed by myself, that the work contained herein is my own except where explicitly stated otherwise in the text. This work has not been submitted for any other degree or professional qualification except as specified; nor has it been published. \\
+\noindent Yo, D. Juan Antonio Villegas Recio, autor de este TFG, \\
 \newline
-City, date
+Declaro explícitamente que el trabajo aquí presentado como Trabajo de Fin de Grado de mis estudios en el Doble Grado en Ingeniería Informática y Matemáticas, correspondiente al curso académico 2021--2022, es original. Es decir, no se han utilizado para el desarrollo del trabajo fuentes sin haberlas citado debidamente. \\
+\newline
+Granada, a \today.
 
 \vspace{0cm}
-\noindent\includegraphics[width=0.3\textwidth]{img/mysignature.png}
+\noindent\includegraphics[width=0.3\textwidth]{img/firma.png}
 
 \vspace*{-1.1cm}
 \noindent \rule{0.3\textwidth}{.3pt}\\
