--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -23,6 +23,8 @@
 
     \bibitem{Gerald} Edgar, G.A. (2008). \textit{Measure, Topology, and Fractal Geometry} Undergraduate Texts in Mathematics. Springer New York, 2nd edition. Disponible en \url{https://doi.org/10.1007/978-0-387-74749-1}.
 
+    \bibitem{Gerald-Weierstrass} Edgar, G.A. (1993), ``On continuous functions of a real argument that do not possess a well-defined derivative for any value of their argument'', \textit{Classics on Fractals},  Studies in Nonlinearity, Addison-Wesley Publishing Company, pp. 3--9\footnote{Esta referencia es una traducción al inglés del texto original escrito en alemán por Weierstrass en: Weierstrass, K. (1895) ``Über continuirliche Functionen eines reellen Arguments, die für keinen Werth des letzeren einen bestimmten Differentialquotienten besitzen'', \textit{Mathematische Werke von Karl Weierstrass}, vol. 2, Berlin, Germany: Mayer and Müller, pp. 71–74}.
+
     \bibitem{Falconer} Falconer, K. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
 
     \bibitem{Foroutan} Foroutan-pour, K., Dutilleul, P. y Smith, D. (1999). Advances in the implementation of the box-counting method of fractal dimension estimation. \textit{Applied Mathematics and Computation}, 105(2):195--210. Disponible en \url{https://doi.org/10.1016/s0096-3003(98)10096-6}.
