--- a/memoria/tex/capitulos/capitulo-4.tex
+++ b/memoria/tex/capitulos/capitulo-4.tex
@@ -243,7 +243,7 @@ Enunciamos una propiedad de la métrica de Hausdorff $h$ que nos hará falta den
                  & = & \max\left\lbrace \max\left\lbrace d(x,C):x\in A \right\rbrace, \max\left\lbrace d(x,C):x\in B \right\rbrace\right\rbrace \\
                  & = & \max\left\lbrace d(A,C),d(A,B) \right\rbrace.
     \end{eqnarray*}
-    Y de esta igualdad se deduce la desigualdad pedida. %TODO aunque no se muy bien como.
+    Y de esta igualdad se deduce la desigualdad pedida.
 \end{proof}
 
 Seguidamente presentamos un resultado que nos ayuda a construir aplicaciones contractivas en $\mathcal{H}(X)$ a partir de no sólo una sino de varias aplicaciones contractivas en $X$, a través del cual enlazaremos, esta vez en un contexto más teórico y formal, con la definición de SFI como conjunto de aplicaciones contractivas en un espacio métrico completo.
@@ -418,7 +418,7 @@ que es un valor situado entre 1 y 2.
     \label{tabla:curva-koch}
 \end{table}
 
-Para comprobar que los atractores de los SFIs que presentamos son los que realmente afirmamos que son puede ejecutarse el código \textit{Mathematica} que se ha utilizado para graficar muchas de las imágenes de este capítulo. Puede encontrarse, junto con los códigos de los demás capítulos, en \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/Mathematica}.
+Para comprobar que los atractores de los SFIs que presentamos son los que realmente afirmamos que son puede ejecutarse el código \textit{Mathematica} que se ha utilizado para graficar muchas de las imágenes de este capítulo. Puede encontrarse, junto con los códigos de los demás capítulos, en \url{https://github.com/JAntonioVR/Geometria-Fractal/tree/main/Mathematica} o en el directorio \texttt{Mathematica} del material entregado.
 
 
 \section{El problema inverso}
