--- a/memoria/tex/capitulos/capitulo-6.tex
+++ b/memoria/tex/capitulos/capitulo-6.tex
@@ -59,18 +59,16 @@ Desde el inicio, al estar en fases de desarrollo, se suele descuidar bastante la
 
 La última, pero no por ello menos importante fase del desarrollo debe estar finalizada la misma semana que se produce la entrega, es decir, la \textbf{semana 20} y por supuesto antes del día \textbf{20 de Junio de 2022}.
 
-\vspace{1cm}
+\newpage
 
 En conclusión, y a modo de resumen, presentamos en la imagen \ref{fig:Gantt} el conocido como \textit{diagrama de Gantt}, que sintetiza en una tabla el tiempo dedicado a cada actividad. Cada columna representa una semana, identificada por el día y el mes del lunes de dicha semana.
 
 \begin{figure} [ht]
     \centering
-    \includegraphics[scale = 0.44]{img/Gantt.png}
+    \includegraphics[scale = 0.44]{img/C6/Gantt.png}
     \caption{Diagrama de Gantt de la planificación del desarrollo del producto software}
     \label{fig:Gantt}
 \end{figure}
-
-\newpage
 
 \section{Presupuesto del producto software}
 
@@ -173,6 +171,8 @@ De forma genérica:
 
 No existen requisitos de datos, ya que no hay realmente ninguna base de datos ni es necesaria, pues no es una aplicación que almacene datos, sino que realiza cálculos para graficar imágenes.
 
+\newpage
+
 \section{Análisis de casos de uso}
 
 A continuación describiremos los posibles casos de uso del software a desarrollar:
@@ -189,7 +189,7 @@ Ante estos casos de uso, en la figura \ref{fig:casos-uso} vemos el diagrama de c
 
 \begin{figure} [ht]
 \centering
-\includegraphics[width=15cm]{img/diagrama-CU.png}
+\includegraphics[width=15cm]{img/C6/diagrama-CU.png}
 \caption{Diagrama de Casos de Uso}
     \label{fig:casos-uso}
 \end{figure}
@@ -199,7 +199,7 @@ Por último, con el objetivo de clarificar las distintas actividades que puede r
 \newpage
 \begin{figure} [ht]
     \centering
-    \includegraphics[width=11cm]{img/diagrama-actividad.png}
+    \includegraphics[width=11cm]{img/C6/diagrama-actividad.png}
     \caption{Diagrama de Actividad}
         \label{fig:diagrama-actividad}
     \end{figure}
@@ -214,17 +214,26 @@ A continuación presentaremos los bocetos básicos, a veces llamados `wireframes
 Como vemos en la imagen \ref{fig:wireframe-home}, al acceder a la web nos aparecería la posibilidad de elegir si queremos explorar el mundo de los fractales 2D o 3D. Debajo del menú seleccionable aparecería una breve introducción al mundo de los fractales desde un punto de vista entendible por casi cualquier persona con conocimientos básicos.
 
 Sobre la pantalla de la imagen \ref{fig:wireframe-fractals}, aparecería a la izquierda el canvas donde se visualizarían los fractales y los distintos controles y parámetros modificables estarían en el lado derecho. Debajo de esta sección de la pantalla también se incluiría un texto documentando el sentido de cada parámetro para que el usuario que no conozca demasiado el trasfondo matemático ni informático pueda interactuar sin problemas.
+\newpage
+
+
+\vspace*{\fill}
 
 \begin{figure} [ht]
     \centering
-    \includegraphics[width=10cm]{img/wireframe-home.png}
+    \includegraphics[width=11.5cm]{img/C6/wireframe-home.png}
     \caption{Wireframe de la portada de la página}
     \label{fig:wireframe-home}
     \end{figure}
 
+    \vspace*{\fill}
+
 \begin{figure} [ht]
     \centering
-    \includegraphics[width=10cm]{img/wireframe-1.png}
+    \includegraphics[width=11.5cm]{img/C6/wireframe-1.png}
     \caption{Wireframe de la pantalla en la que se visualizan fractales}
         \label{fig:wireframe-fractals}
     \end{figure}
+
+
+\vspace*{\fill}
