--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -1,5 +1,5 @@
 
-Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes de los pensadores desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor} son los precursores de toda la teoría fractal de la que disponemos a día de hoy. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada, esto en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
+Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes de los pensadores desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor} son los precursores de toda la teoría fractal de la que disponemos a día de hoy. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada, esto en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''\cite{Gerald-Weierstrass}.
 
 Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron independientemente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
 
@@ -17,11 +17,11 @@ Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen 
 
 La geometría fractal y el teorema del collage también han inspirado el desarrollo de herramientas de trabajo en otras áreas de las matemáticas. Ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. En la revista `Fractals' podemos también encontrar un artículo de 2019 llamado \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}, que relaciona geometría fractal y ecuaciones diferenciales.
 
-Por su parte, la revolución informática afecta en particular a las GPUs.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, que es de los últimos modelos, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
+Por su parte, la revolución informática afecta en particular a las GPUs.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, cuyas primeras unidades salieron a la venta el 27 de Enero de 2022, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
 
 Sobre esto, la última tendencia en informática gráfica, y particularmente en ray-tracing, es aplicar `Deep Learning' en la síntesis de imágenes por ordenador. En contraste con la tradicional forma de programar potentes algoritmos para graficar imágenes lo más realistas posibles, el uso de redes neuronales en muchas situaciones ofrece resultados incluso mejores. Es por esto que este es un campo abierto a día de hoy en informática gráfica. Una explicación más detallada a la par que dinámica se puede encontrar en \cite{RT-AI}.
 
-Vemos que el ray tracing está muy a la orden del día, pero sólo hace unos 3 años que existen herramientas propiamente dedicadas al ray-tracing, entre las que destacan \href{https://nvpro-samples.github.io/vk_raytracing_tutorial_KHR/}{\textcolor{blue}{Vulkan con su extensión KHR}}. El principal defecto que tienen es que solo pueden ser ejecutadas en GPUs muy caras y además sólo trabajan con mallas de polígonos. La alternativa a ellas es simular el ray-tracing en herramientas de visualización estándar.
+Vemos que el ray tracing está muy a la orden del día, pero sólo hace unos 4 años, (desde la llegada de la arquitectura \textit{Turing} a las GPUs de NVIDIA) que existen herramientas que incluyen núcleos de procesamiento específicos para ray-tracing. Entre ellas, destacan \href{https://nvpro-samples.github.io/vk_raytracing_tutorial_KHR/}{\textcolor{blue}{Vulkan con su extensión KHR}}. El principal defecto que tienen es que las GPUs que soportan su ejecución son muy caras y además sólo trabajan con mallas de polígonos. La alternativa a ellas es simular el ray-tracing en herramientas de rasterización.
 
 Debemos también mencionar el evento \href{https://s2022.siggraph.org/}{\textcolor{blue}{Siggraph}}, que es un evento anual en el que se exponen nuevas técnicas y avances en el mundo de la informática gráfica. En su web podemos encontrar muchos papers y artículos relacionados con la generación de imágenes. Por ejemplo en la siguiente encontramos muchos textos con fecha de 2021: \url{https://kesen.realtimerendering.com/sig2021.html}.
 
