--- a/memoria/tex/resumen.tex
+++ b/memoria/tex/resumen.tex
@@ -11,7 +11,7 @@ Por otro lado, la geometría fractal es una disciplina muy visual. Las figuras, 
 
 Si damos un salto a las tres dimensiones, la situación es mucho más compleja, ya que es fácil identificar una imagen con un fragmento del plano, pero representar el espacio 3D en una imagen 2D es más difícil. Para ello hemos aplicado una herramienta tan conocida como costosa: El Ray-Tracing. Gracias a ella podremos visualizar tanto escenas sencillas con un aceptable grado de realismo como escenas con fractales tridimensionales originados por la generalización a 3D de los conjuntos de Julia y de Mandelbrot (imágenes \ref{fig:julia-3D} y \ref{fig:mandelbub}).
 
-Toda esta tarea de visualizado se ha desarrollado de forma interactiva, creando como producto software una web fácilmente accesible para cualquier usuario que disponga de un ordenador y un navegador.
+Toda esta tarea de visualizado se ha desarrollado de forma interactiva, creando como producto software una web fácilmente accesible para cualquier usuario que disponga de un ordenador y un navegador. La URL de dicha web es \url{https://jantoniovr.github.io/Geometria-Fractal/}, y todo el código utilizado para su desarrollo se puede encontrar en el repositorio de GitHub de este proyecto, disponible en \url{https://github.com/JAntonioVR/Geometria-Fractal}.
 
 \section*{Palabras clave}
 
