--- a/memoria/tex/capitulos/capitulo-5.tex
+++ b/memoria/tex/capitulos/capitulo-5.tex
@@ -8,22 +8,22 @@ Queda claro que \textit{Mathematica} es un software de cálculo muy útil, pero 
 
 \section{Síntesis de imágenes en GPUs. WebGL}
 
-Afortunadamente, contamos con herramientas que están dedicadas a la producción de imágenes por ordenador. Éste es el objetivo principal de la \textit{informática gráfica}. De forma genérica, la informática gráfica, en ocasiones también llamada \textit{computación gráfica}, es la rama de las ciencias de la computación que aprovecha los recursos hardware y software de un computador para sintetizar y manipular digitalmente contenido visual. Concretamente, un computador puede utilizar durante el procesado tanto su CPU (unidad central de procesamiento, el procesador) como opcionalmente la GPU (unidad de procesamiento gráfico, la gráfica). La GPU es un microprocesador cuya función es realizar tareas gráficas y operaciones en coma flotante para así aligerar la carga del procesador central en aplicaciones gráficas, por ejemplo videojuegos. Así, mientras lo relacionado con gráficos e imágenes se ejecuta en la gráfica, el procesador puede dedicarse a otras cosas.
+Afortunadamente, contamos con herramientas que están dedicadas a la producción de imágenes por ordenador. Éste es el objetivo principal de la \textbf{informática gráfica}. De forma genérica, la informática gráfica, en ocasiones también llamada \textit{computación gráfica}, es la rama de las ciencias de la computación que aprovecha los recursos hardware y software de un computador para sintetizar y manipular digitalmente contenido visual. Concretamente, un computador puede utilizar durante el procesado tanto su \textbf{CPU} (Unidad Central de Procesamiento, el procesador) como opcionalmente la \textbf{GPU} (Unidad de Procesamiento Gráfico, la gráfica). La GPU es un microprocesador cuya función es realizar tareas gráficas y operaciones en coma flotante para así aligerar la carga del procesador central en aplicaciones gráficas, por ejemplo videojuegos. Así, mientras lo relacionado con gráficos e imágenes se ejecuta en la gráfica, el procesador puede dedicarse a otras cosas.
 
-En lo que a arquitectura hardware se refiere, la CPU y la GPU presentan varias diferencias. La CPU está formada por pocos núcleos de procesamiento pero muy potentes, por lo que está principalmente orientada a la ejecución secuencial de las tareas. Por contra, la GPU está formada por cientos, y a veces incluso miles de ALUs (unidad aritmético-lógica) especializadas en operaciones en coma flotante, por lo que está muy preparada para la ejecución paralela de tareas. Esto nos lleva a la principal ventaja del uso de la GPU. Gracias a esa gran cantidad de unidades de procesamiento es posible en cada instante procesar miles de píxeles, vértices o colores a la vez, provocando una destacable mejora de las prestaciones en lo que a tiempos se refiere.
+En lo que a arquitectura hardware se refiere, la CPU y la GPU presentan varias diferencias. La CPU está formada por pocos núcleos de procesamiento pero muy potentes, por lo que está principalmente orientada a la ejecución secuencial de las tareas. Por contra, la GPU está formada por cientos, y a veces incluso miles de ALUs (unidad aritmético-lógica) especializadas en operaciones en coma flotante, por lo que está muy preparada para la \textbf{ejecución paralela de tareas}. Esto nos lleva a la principal ventaja del uso de la GPU. Gracias a esa gran cantidad de unidades de procesamiento es posible en cada instante procesar miles de píxeles, vértices o colores a la vez, provocando una destacable mejora de las prestaciones en lo que a tiempos se refiere.
 
-La idea general de la computación gráfica consiste en llevar una escena, que puede ser en 2D o en 3D, compuesta por un conjunto de objetos, a una pantalla formada por un número alto pero finito de píxeles. La manera más común de hacer esto es dividir cada elemento de la escena en un conjunto de caras planas llamadas \textit{primitivas}, generalmente triángulos, y una vez divididos calcular qué píxeles de la pantalla ocupa cada primitiva. Este procedimiento se denomina \textit{rasterización}. La complejidad en el proceso de rasterización puede aumentar muy rápidamente, por lo que merece la pena separar qué partes de una aplicación querremos cambiar de una aplicación gráfica a otra (p. ej. vértices, objetos o colores) y cuáles es preferible encapsular y optimizar en una interfaz (p. ej. motor gráfico o código de bajo nivel). Así es como surgen las llamadas APIs de rasterización, entre las que destacan \textcolor{blue}{\href{https://www.opengl.org/}{OpenGL}}, \textcolor{blue}{\href{https://www.microsoft.com/es-es/download/details.aspx?id=35}{DirectX}}, \textcolor{blue}{\href{https://developer.apple.com/metal/}{Metal}} o \textcolor{blue}{\href{https://www.vulkan.org/}{Vulkan}}.
+La idea general de la computación gráfica consiste en llevar una escena, que puede ser en 2D o en 3D, compuesta por un conjunto de objetos, a una pantalla formada por un número alto pero finito de píxeles. La manera más común de hacer esto es dividir cada elemento de la escena en un conjunto de caras planas llamadas \textit{primitivas}, generalmente triángulos, y una vez divididos calcular qué píxeles de la pantalla ocupa cada primitiva. Este procedimiento se denomina \textbf{rasterización}. La complejidad en el proceso de rasterización puede aumentar muy rápidamente, por lo que merece la pena separar qué partes de una aplicación querremos cambiar de una aplicación gráfica a otra (p. ej. vértices, objetos o colores) y cuáles es preferible encapsular y optimizar en una interfaz (p. ej. motor gráfico o código de bajo nivel). Así es como surgen las llamadas APIs de rasterización, entre las que destacan \textcolor{blue}{\href{https://www.opengl.org/}{OpenGL}}, \textcolor{blue}{\href{https://www.microsoft.com/es-es/download/details.aspx?id=35}{DirectX}}, \textcolor{blue}{\href{https://developer.apple.com/metal/}{Metal}} o \textcolor{blue}{\href{https://www.vulkan.org/}{Vulkan}}.
 
 \begin{figure} [ht]
     \centering
     \includegraphics[scale = 0.3]{img/C5/APis.png}
 \end{figure}
 
-Para usar la GPU, debemos especificarle a la API un fragmento de código programado para ejecutarse específicamente en la misma. Se suelen denominar \textit{shaders} a estos trozos de código fuente que están escritos para ser ejecutados exclusivamente en la GPU. El resto de código necesario para que la API funcione se suele escribir en C/C++, pero también en Python o en JavaScript y está destinado a ejecutarse en la CPU. Estos shaders en general están escritos en su propio lenguaje: GLSL (GL Shading Language) en el caso de OpenGL y Vulkan, HLSL (High-Level Shading Language) de Microsoft para DirectX y MSL (Metal Shading Language) para Metal. 
+Para usar la GPU, debemos especificarle a la API un fragmento de código programado para ejecutarse específicamente en la misma. Se suelen denominar \textbf{\textit{shaders}} a estos trozos de código fuente que están escritos para ser ejecutados exclusivamente en la GPU. El resto de código necesario para que la API funcione se suele escribir en C/C++, pero también en Python o en JavaScript y está destinado a ejecutarse en la CPU. Estos shaders en general están escritos en su propio lenguaje: GLSL (GL Shading Language) en el caso de OpenGL y Vulkan, HLSL (High-Level Shading Language) de Microsoft para DirectX y MSL (Metal Shading Language) para Metal. 
 
 Por su parte, \textbf{WebGL} es una adaptación de OpenGL a JavaScript. Es decir, en lugar de C/C++ se emplea JavaScript como lenguaje cuyo código se ejecuta en CPU. Al igual que el propio OpenGL, utiliza GLSL para la programación de shaders. El rasgo más característico de WebGL es que, al utilizar JavaScript, es posible ejecutarlo en cualquier navegador web. Esta es la base de la gran ventaja de WebGL: su portabilidad. Una aplicación web programada en WebGL puede ser usada desde cualquier navegador con soporte, sin que el usuario tenga que instalar ningún tipo de dependencia y de forma totalmente independiente al sistema operativo que utilice el dispositivo o del fabricante de la GPU. Además, el propio JavaScript cuenta con soporte para manipular dinámicamente el DOM de un documento HTML y para la gestión de eventos. Esto, unido a la portabilidad, hace que WebGL sea la mejor opción que podemos elegir para este proyecto.
 
-Las aplicaciones web basadas en WebGL se utilizan para la visualización de imágenes en un elemento \verb|<canvas>| de HTML en los navegadores y sistemas que lo soporten\footnote{Esto se puede comprobar gracias a páginas dedicadas a ello como \href{https://get.webgl.org/}{\textcolor{blue}{esta página de testeo WebGL}} o \href{http://webglreport.com/}{\textcolor{blue}{WebGL Report}}} sin necesidad de plug-ins. El principal defecto tanto de WebGL como de otras APIs es la dificultad a la hora de querer comenzar a visualizar imágenes, pues tiene varios componentes complejos de enlazar en un principio. A continuación explicaremos el flujo de trabajo que utiliza WebGL y cómo podemos comenzar a utilizar la herramienta para visualizar fractales.
+Las aplicaciones web basadas en WebGL se utilizan para la visualización de imágenes en un elemento \verb|<canvas>| de HTML en los navegadores y sistemas que lo soporten\footnote{Esto se puede comprobar mediante páginas como \href{https://get.webgl.org/}{\textcolor{blue}{esta página de testeo WebGL}} o \href{http://webglreport.com/}{\textcolor{blue}{WebGL Report}}.} sin necesidad de plug-ins. El principal defecto tanto de WebGL como de otras APIs es la dificultad a la hora de querer comenzar a visualizar imágenes, pues tiene varios componentes complejos de enlazar en un principio. A continuación explicaremos el flujo de trabajo que utiliza WebGL y cómo podemos comenzar a utilizar la herramienta para visualizar fractales.
 
 \section{Componentes de WebGL}
 \label{section:componentes-wgl}
@@ -118,7 +118,7 @@ gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 \end{lstlisting}
 
-Y una vez creados los buffers y el \textit{shader} por separado, debemos especificarle al buffer que transfiera la información que contiene a las posiciones de memoria que tiene el \textit{shader} reservadas para las variables que espera. Supongamos que hemos creado en un \textit{vertex shader} una variable \verb|attribute vec4 aVertexColor;| de forma que queremos asociar los colores del código anterior a esta variable por cada uno de los 4 vértices. Mostramos a continuación la forma de hacerlo, pudiendo encontrar más información clarificadora en la documentación de la clase \href{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}{\textcolor{blue}{WebGLRenderingContext}}.
+Y una vez creados los buffers y el \textit{shader} por separado, debemos especificarle al buffer que transfiera la información que contiene a las posiciones de memoria que tiene el \textit{shader} reservadas para las variables que espera. Supongamos que hemos creado en un \textit{vertex shader} una variable \verb|attribute vec4 aVertexColor;| de forma que queremos asociar los colores del código anterior a esta variable por cada uno de los 4 vértices. Mostramos a continuación la forma de hacerlo, pudiendo encontrar más información clarificadora en la documentación de la clase \href{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}{\textcolor{blue}{WebGLRenderingContext}}\footnote{Disponible en \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}.}.
 
 \begin{lstlisting}
 const location = gl.getAttribLocation(
@@ -174,9 +174,7 @@ Crearemos un buffer para almacenar las posiciones de los cuatro vértices y otro
 
 Fíjese cómo hay un vértice blanco, uno rojo, uno verde y uno azul, de forma que en los píxeles intermedios hay colores intermedios entre estos, fruto de la interpolación que se realiza entre \textit{vertex} y \textit{fragment shader}.
 
-Este ejemplo se corresponde al expuesto en \cite{MDN-1}, cuya adaptación podemos encontrar en el repositorio de este trabajo, concretamente en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/js/canvas.js}. Podemos observar en la imagen \ref{fig:componentes-wgl} un esquema de los componentes de WebGL y cómo se relacionan entre ellos hasta finalmente visualizar la imagen deseada.  %TODO Cambiar URL si es necesario
-
-\newpage
+Este ejemplo se corresponde al expuesto en \cite{MDN-1}, cuya adaptación podemos encontrar en el repositorio de este trabajo, concretamente en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/js/canvas.js}. Podemos observar en la imagen \ref{fig:componentes-wgl} un esquema de los componentes de WebGL y cómo se relacionan entre ellos hasta finalmente visualizar la imagen deseada.
 
 
 
